--- a/.github/workflows/sync-to-bitbucket.yml
+++ b/.github/workflows/sync-to-bitbucket.yml
@@ -25,7 +25,7 @@ jobs:
           BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_APP_PASSWORD }}
         run: |
           # Construye la URL de Bitbucket con el token de acceso para autenticación HTTPS
-          BITBUCKET_REPO_URL="https://x-token-auth:${BITBUCKET_APP_PASSWORD}@bitbucket.org/mktautomation/eia-plugin.git
+          BITBUCKET_REPO_URL="https://x-token-auth:${BITBUCKET_APP_PASSWORD}@bitbucket.org/mktautomation/eia-plugin.git"
           # Empuja todas las ramas y tags, sobrescribiendo el remoto
           git push bitbucket-mirror --all --force
           git push bitbucket-mirror --tags --force
